1: All the pages link |Done

--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
                     Shop
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="javascript:void(0)">Organic Food and Groceries</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Eco-Friendly Home and Kitchen</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Natural Beauty and Personal Care</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Sustainable Fashion</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Health and Wellness</a></li>
+                    <li><a class="dropdown-item" href="pages/shop-page.html" title="Organic Food and Groceries">Organic Food and Groceries</a></li>
+                    <li><a class="dropdown-item" href="pages/shop-page.html" title="Eco-Friendly Home and Kitchen">Eco-Friendly Home and Kitchen</a></li>
+                    <li><a class="dropdown-item" href="pages/shop-page.html" title="Natural Beauty and Personal Care">Natural Beauty and Personal Care</a></li>
+                    <li><a class="dropdown-item" href="pages/shop-page.html" title="Sustainable Fashion">Sustainable Fashion</a></li>
+                    <li><a class="dropdown-item" href="pages/shop-page.html" title="Health and Wellness">Health and Wellness</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="pages/about-page.html">About us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Blog</a>
+                  <a class="nav-link" href="pages/blog-page.html">Blog</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="pages/contact-page.html">Contact us</a>
@@ -84,7 +84,7 @@
               </form>
               <div class="d-flex icon-container mb-2 mb-lg-0 justify-content-end align-items-center">
                 <a href="pages/register.html"><i class="fa fa-user"></i> Account</a>
-                <a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a>
+                <a href="pages/cart-page.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a>
               </div>
             </div>
           </div>
@@ -102,7 +102,7 @@
             <div class="carousel-caption">
               <h5>Organic Vegetables</h5>
               <p>Enjoy fresh and healthy organic vegetables for a balanced diet.</p>
-              <a href="javascript:void(0)" class="btn btn-primary">Explore products</a>
+              <a href="pages/shop-page.html" class="btn btn-primary">Explore products</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -110,7 +110,7 @@
             <div class="carousel-caption">
               <h5>Eco Friendly Products</h5>
               <p>Explore a range of eco-friendly products for a sustainable lifestyle.</p>
-              <a href="javascript:void(0)" class="btn btn-primary">Explore products</a>
+              <a href="pages/shop-page.html" class="btn btn-primary">Explore products</a>
             </div>
           </div>
           <div class="carousel-item">
@@ -118,7 +118,7 @@
             <div class="carousel-caption">
               <h5>Organic Beauty Product</h5>
               <p>Experience the goodness of organic beauty products for a natural routine.</p>
-              <a href="javascript:void(0)" class="btn btn-primary">Explore products</a>   
+              <a href="pages/shop-page.html" class="btn btn-primary">Explore products</a>   
             </div>
           </div>
         </div>
@@ -138,7 +138,7 @@
             <img src="assets/images/advertisement-images/antipodes-lime-caviar.png" class="img-fluid" alt="antipodes-lime-caviar">
             <div class="content">
               <h4>Best products for <br><span class="stylish-font">health</span> and <span class="stylish-font">wellness.</span></h4>
-              <a href="javascript:void(0)" class="btn btn-primary">Shop now</a>
+              <a href="pages/shop-page.html" class="btn btn-primary">Shop now</a>
             </div>
           </div>
           <div class="col-12 col-md-6 col-lg-6">
@@ -147,7 +147,7 @@
                   <img src="assets/images/advertisement-images/eco-home.png" class="img-fluid" alt="eco-home">
                   <div class="content">
                     <h4>Up to <span class="stylish-font">17%</span> off on <br> <span class="stylish-font"> friendly </span> home products.</h4>
-                    <a href="javascript:void(0)" class="btn btn-primary">Shop now</a>
+                    <a href="pages/shop-page.html" class="btn btn-primary">Shop now</a>
                   </div>
                 </div>
               </div>
@@ -156,7 +156,7 @@
                   <img src="assets/images/advertisement-images/organic-health.png" class="img-fluid" alt="organic-health">
                   <div class="content">
                     <h4>Up to 50% off on <br> <span class="stylish-font">organic</span> and <span class="stylish-font">health</span> products.</h4>
-                    <a href="javascript:void(0)" class="btn btn-primary">Shop now</a>
+                    <a href="pages/shop-page.html" class="btn btn-primary">Shop now</a>
                   </div>
                 </div>
               </div>
@@ -194,7 +194,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Carrots Group Scal</a>
+                  <a href="pages/product-page.html">Carrots Group Scal</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -230,7 +230,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">organic cherries 1KG</a>
+                  <a href="pages/product-page.html">organic cherries 1KG</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -266,7 +266,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">organic mangoes 1KG</a>
+                  <a href="pages/product-page.html">organic mangoes 1KG</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -302,7 +302,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">organic kiwi 1KG</a>
+                  <a href="pages/product-page.html">organic kiwi 1KG</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -339,7 +339,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Viridian Quercetin B5 Plus Complex 60 capsules</a>
+                  <a href="pages/product-page.html">Viridian Quercetin B5 Plus Complex 60 capsules</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£21.99</span>
@@ -375,7 +375,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Teapigs Liquorice & Mint 50 Bags</a>
+                  <a href="pages/product-page.html">Teapigs Liquorice & Mint 50 Bags</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£15.50</span>
@@ -411,7 +411,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Steens Monofloral Manuka Honey UMF10+ 340g</a>
+                  <a href="pages/product-page.html">Steens Monofloral Manuka Honey UMF10+ 340g</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£24.99</span>
@@ -447,7 +447,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Alemany Forest Honey 500g</a>
+                  <a href="pages/product-page.html">Alemany Forest Honey 500g</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£12.99</span>
@@ -459,7 +459,7 @@
         </div>
         <div class="row justify-content-center text-center view-all-products">
           <div class="col-12 col-md-12 col-lg-12">
-            <a href="javascript:void(0)">View All</a>
+            <a href="pages/shop-page.html">View All</a>
           </div>
         </div>
       </div>
@@ -609,7 +609,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">Well.Actually. Liposomal D3 2000 IU's + K2 100mcg Spray</a>
+                                <a href="pages/product-page.html">Well.Actually. Liposomal D3 2000 IU's + K2 100mcg Spray</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£19.19</span>
@@ -646,7 +646,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">Tisserand Sleep Better Pulse Point Roller Ball 10ml</a>
+                                <a href="pages/product-page.html">Tisserand Sleep Better Pulse Point Roller Ball 10ml</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£5.60</span>
@@ -683,7 +683,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">AromaWorks Light Range - Petitgrain & Lavender Reed Diffuser 100ml</a>
+                                <a href="pages/product-page.html">AromaWorks Light Range - Petitgrain & Lavender Reed Diffuser 100ml</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£7.19</span>
@@ -720,7 +720,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">Viridian 100% Elderberry Throat Spray - Fresh Extracts With Manuka 50ml</a>
+                                <a href="pages/product-page.html">Viridian 100% Elderberry Throat Spray - Fresh Extracts With Manuka 50ml</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£18.99</span>
@@ -760,7 +760,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">Rheal Clean Greens Superfood Blend 150g</a>
+                                <a href="pages/product-page.html">Rheal Clean Greens Superfood Blend 150g</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£20.00</span>
@@ -797,7 +797,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">Pukka Turmeric Active 60 caps</a>
+                                <a href="pages/product-page.html">Pukka Turmeric Active 60 caps</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£14.99</span>
@@ -834,7 +834,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">Natures Truth Levagen+ Ova 120</a>
+                                <a href="pages/product-page.html">Natures Truth Levagen+ Ova 120</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£17.99</span>
@@ -871,7 +871,7 @@
                                 </ul>
                               </div>
                               <div class="product-title">
-                                <a href="javascript:void(0)">Naturya Spirulina Powder 200g</a>
+                                <a href="pages/product-page.html">Naturya Spirulina Powder 200g</a>
                               </div>
                               <div class="product-price">
                                 <span class="product-current-price">£9.99</span>
@@ -959,7 +959,7 @@
         </div>
         <div class="row justify-content-center text-center view-all-blog">
           <div class="col-12 col-md-12 col-lg-12">
-            <a href="javascript:void(0)">View all</a>
+            <a href="pages/blog-page.html">View all</a>
           </div>
         </div>
       </div>
@@ -983,9 +983,9 @@
               <hr>
               <ul class="list-group">
                 <li class="list-group-item"><a href="index.html" class="active">Home</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">Shop</a></li>
+                <li class="list-group-item"><a href="pages/shop-page.html">Shop</a></li>
                 <li class="list-group-item"><a href="pages/about-page.html">About</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">Blog</a></li>
+                <li class="list-group-item"><a href="pages/blog-page.html">Blog</a></li>
                 <li class="list-group-item"><a href="pages/contact-page.html">Contact us</a></li>
               </ul>
             </div>
@@ -1043,12 +1043,12 @@
             <div class="col-12 col-md-4 col-lg-4 m-auto payment-gateway-col">
               <img src="assets/images/others/payment_gateway.png" class="img-fluid" alt="GreenHKMarket Logo">
             </div>
-            <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
+            <!-- <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
               <ul class="list-group list-group-horizontal m-auto  ">
                 <li class="list-group-item"><a href="javascript:void(0)">Privacy policy</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Terms and conditions</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </footer>
