--- a/pages/cart-page.html
+++ b/pages/cart-page.html
@@ -51,11 +51,11 @@
                     Shop
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="javascript:void(0)">Organic Food and Groceries</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Eco-Friendly Home and Kitchen</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Natural Beauty and Personal Care</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Sustainable Fashion</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Health and Wellness</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Organic Food and Groceries</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Eco-Friendly Home and Kitchen</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Natural Beauty and Personal Care</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Sustainable Fashion</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Health and Wellness</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -108,16 +108,16 @@
                     <tbody class="w-100">
                       <tr>
                         <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
-                        <td><a href="javascript:void(0)"><img src="../assets/images/product-images/10.webp" class="img-fluid product-img" alt="Product image"></a></td>
-                        <td><a href="javascript:void(0)" class="product-title-link">Together Health Vegan Vitamin D3 food supplement 30 caps</a></td>
+                        <td><a href="product-page.html"><img src="../assets/images/product-images/10.webp" class="img-fluid product-img" alt="Product image"></a></td>
+                        <td><a href="product-page.html" class="product-title-link">Together Health Vegan Vitamin D3 food supplement 30 caps</a></td>
                         <td>£5.59</td>
                         <td><input type="number" class="form-control" min="1" max="10" value="1"></td>
                         <td>£5.59</td>
                       </tr>
                       <tr>
                         <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
-                        <td><a href="javascript:void(0)"><img src="../assets/images/product-images/1.png" class="img-fluid product-img" alt="Product image"></a></td>
-                        <td><a href="javascript:void(0)" class="product-title-link">Vegetables Juices</a></td>
+                        <td><a href="product-page.html"><img src="../assets/images/product-images/1.png" class="img-fluid product-img" alt="Product image"></a></td>
+                        <td><a href="product-page.html" class="product-title-link">Vegetables Juices</a></td>
                         <td>£2</td>
                         <td><input type="number" class="form-control" min="1" max="10" value="2"></td>
                         <td>£4</td>
@@ -245,12 +245,12 @@
             <div class="col-12 col-md-4 col-lg-4 m-auto payment-gateway-col">
               <img src="../assets/images/others/payment_gateway.png" class="img-fluid" alt="GreenHKMarket Logo">
             </div>
-            <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
+            <!-- <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
               <ul class="list-group list-group-horizontal m-auto  ">
                 <li class="list-group-item"><a href="javascript:void(0)">Privacy policy</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Terms and conditions</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </footer>
