--- a/pages/contact-page.html
+++ b/pages/contact-page.html
@@ -51,11 +51,11 @@
                     Shop
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="javascript:void(0)">Organic Food and Groceries</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Eco-Friendly Home and Kitchen</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Natural Beauty and Personal Care</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Sustainable Fashion</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Health and Wellness</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Organic Food and Groceries</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Eco-Friendly Home and Kitchen</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Natural Beauty and Personal Care</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Sustainable Fashion</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Health and Wellness</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -229,11 +229,11 @@
               <h5>Links</h5>
               <hr>
               <ul class="list-group">
-                <li class="list-group-item"><a href="../index.html" class="active">Home</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">Shop</a></li>
+                <li class="list-group-item"><a href="../index.html">Home</a></li>
+                <li class="list-group-item"><a href="shop-page.html">Shop</a></li>
                 <li class="list-group-item"><a href="about-page.html">About</a></li>
                 <li class="list-group-item"><a href="blog-page.html">Blog</a></li>
-                <li class="list-group-item"><a href="contact-page.html">Contact us</a></li>
+                <li class="list-group-item"><a href="contact-page.html" class="active">Contact us</a></li>
               </ul>
             </div>
             <div class="col-12 col-md-3 col-lg-3 contact-col">
@@ -290,12 +290,12 @@
             <div class="col-12 col-md-4 col-lg-4 m-auto payment-gateway-col">
               <img src="../assets/images/others/payment_gateway.png" class="img-fluid" alt="GreenHKMarket Logo">
             </div>
-            <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
+            <!-- <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
               <ul class="list-group list-group-horizontal m-auto  ">
                 <li class="list-group-item"><a href="javascript:void(0)">Privacy policy</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Terms and conditions</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </footer>
