--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -51,11 +51,11 @@
                     Shop
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="javascript:void(0)">Organic Food and Groceries</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Eco-Friendly Home and Kitchen</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Natural Beauty and Personal Care</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Sustainable Fashion</a></li>
-                    <li><a class="dropdown-item" href="javascript:void(0)">Health and Wellness</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Organic Food and Groceries</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Eco-Friendly Home and Kitchen</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Natural Beauty and Personal Care</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Sustainable Fashion</a></li>
+                    <li><a class="dropdown-item" href="shop-page.html">Health and Wellness</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
@@ -84,7 +84,7 @@
               </form>
               <div class="d-flex icon-container mb-2 mb-lg-0 justify-content-end align-items-center">
                 <a href="register.html"><i class="fa fa-user"></i> Account</a>
-                <a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a>
+                <a href="cart-page.html"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a>
               </div>
             </div>
           </div>
@@ -189,7 +189,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Carrots Group Scal</a>
+                  <a href="product-page.html">Carrots Group Scal</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -225,7 +225,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">organic cherries 1KG</a>
+                  <a href="product-page.html">organic cherries 1KG</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -261,7 +261,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">organic mangoes 1KG</a>
+                  <a href="product-page.html">organic mangoes 1KG</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -297,7 +297,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">organic kiwi 1KG</a>
+                  <a href="product-page.html">organic kiwi 1KG</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£20</span>
@@ -334,7 +334,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Viridian Quercetin B5 Plus Complex 60 capsules</a>
+                  <a href="product-page.html">Viridian Quercetin B5 Plus Complex 60 capsules</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£21.99</span>
@@ -370,7 +370,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Teapigs Liquorice & Mint 50 Bags</a>
+                  <a href="product-page.html">Teapigs Liquorice & Mint 50 Bags</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£15.50</span>
@@ -406,7 +406,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Steens Monofloral Manuka Honey UMF10+ 340g</a>
+                  <a href="product-page.html">Steens Monofloral Manuka Honey UMF10+ 340g</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£24.99</span>
@@ -442,7 +442,7 @@
                   </ul>
                 </div>
                 <div class="product-title">
-                  <a href="javascript:void(0)">Alemany Forest Honey 500g</a>
+                  <a href="product-page.html">Alemany Forest Honey 500g</a>
                 </div>
                 <div class="product-price">
                   <span class="product-current-price">£12.99</span>
@@ -534,12 +534,12 @@
             <div class="col-12 col-md-4 col-lg-4 m-auto payment-gateway-col">
               <img src="../assets/images/others/payment_gateway.png" class="img-fluid" alt="GreenHKMarket Logo">
             </div>
-            <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
+            <!-- <div class="col-12 col-md-4 col-lg-4 m-auto temrs-policy-col">
               <ul class="list-group list-group-horizontal m-auto  ">
                 <li class="list-group-item"><a href="javascript:void(0)">Privacy policy</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Terms and conditions</a></li>
               </ul>
-            </div>
+            </div> -->
           </div>
         </div>
       </footer>
